# ashlr-ao

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  PHASE1_SPEC.md  README.md  REFERENCE_PATTERNS.md  ashlar.yaml  ashlar_dashboard.html  ashlar_server.py  ashlr.yaml  ashlr_server.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt  ruff.toml  start.sh
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
ashlr_ao/: __init__.py  __main__.py  analytics.py  auth.py  backends.py  background.py  config.py  dashboard.html  database.py  files.py  licensing.py  manager.py  middleware.py  models.py  server.py  status.py  system_endpoints.py  websocket.py  workflow_endpoints.py
ashlr_ao/static/: dashboard.css  dashboard.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/html/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
tests/: conftest.py  test_agent_features.py  test_auth.py  test_auto_pilot.py  test_background_tasks.py  test_collaboration_fleet.py  test_config.py  test_constants.py  test_coordination.py  test_core.py  test_database.py  test_endpoints.py  test_fleet_templates.py  test_health.py  test_integration.py  test_licensing.py  test_lifecycle.py  test_output_status.py  test_projects.py  test_reliability.py  test_security.py  test_spawn_lifecycle.py  test_status.py  test_stream_json.py  test_webhooks.py  test_workflows.py
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx  Video.tsx
video/src/components/: AgentCard.tsx  GlassPanel.tsx  Logo.tsx  ParticleField.tsx  Terminal.tsx  TypeWriter.tsx
video/src/lib/: animations.ts  theme.ts
video/src/scenes/: Features.tsx  Install.tsx  Intro.tsx  Outro.tsx  Problem.tsx  Solution.tsx
website/: CNAME  index.html  pricing.html  robots.txt  sitemap.xml  vercel.json
website/blog/: index.html  introducing-ashlr-ao.html
website/css/: base.css  blog.css  components.css  docs.css  landing.css
website/docs/: api-reference.html  configuration.html  deployment.html  desktop-app.html  getting-started.html  index.html
website/js/: main.js
