[package]
name = "ashlr-ao"
version = "1.6.1"
description = "Ashlr AO — Agent Orchestration Desktop App"
authors = ["Mason Wyatt"]
edition = "2021"

[lib]
name = "ashlr_ao_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
portpicker = "0.1"
which = "7"
urlencoding = "2"
env_logger = "0.11"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
